// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data cell component renders correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-dsuxgy-MuiTableCell-root"
  >
    <p
      aria-label="non nested property"
      class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-cvfmw9-MuiTypography-root"
      data-mui-internal-clone-element="true"
    >
      non nested property
    </p>
    <div
      style="margin-left: 18px; padding-left: 4px; padding-right: 4px; height: 100%;"
    >
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1i1qbzr-MuiDivider-root"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Data cell component renders nested cell data correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-dsuxgy-MuiTableCell-root"
  >
    <p
      aria-label="nested property"
      class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-cvfmw9-MuiTypography-root"
      data-mui-internal-clone-element="true"
    >
      nested property
    </p>
    <div
      style="margin-left: 18px; padding-left: 4px; padding-right: 4px; height: 100%;"
    >
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1i1qbzr-MuiDivider-root"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Data cell component renders provided cell data correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-dsuxgy-MuiTableCell-root"
  >
    <p
      aria-label="provided test"
      class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-cvfmw9-MuiTypography-root"
      data-mui-internal-clone-element="true"
    >
      <b>
        provided test
      </b>
    </p>
    <div
      style="margin-left: 18px; padding-left: 4px; padding-right: 4px; height: 100%;"
    >
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1i1qbzr-MuiDivider-root"
      />
    </div>
  </div>
</DocumentFragment>
`;
